service/loadbalancer.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-lb
  labels:
    name: nginx-lb
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  type: LoadBalancer
  selector:
    name: nginx-lb
  ports:
    - port: 80
      targetPort: 80
