service/nodeport.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-np
  labels:
    name: nginx-np
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-np
spec:
  type: NodePort
  selector:
    name: nginx-np
  ports:
    - port: 80
      targetPort: 80
